Add About Us page and update navigation links

--- a/team.html
+++ b/team.html
@@ -125,8 +125,8 @@
         </section>
 
         <!-- <section class="navigation">
-            <a href="#" class="nav-item">
-                <h3><span class="number">01</span> RESEARCH</h3>
+            <a href="about-us.html" class="nav-item">
+                <h3><span class="number">01</span> ABOUT US</h3>
             </a>
             <a href="team.html" class="nav-item active">
                 <h3><span class="number">02</span> TEAM</h3>
