--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
 
             <div class="navigation">
-                <a href="#" class="nav-item">
+                <a href="about-us.html" class="nav-item">
                     <h3><span class="number gradient-text">01</span> ABOUT US</h3>
                 </a>
                 <a href="team.html" class="nav-item">
