Add Publications page and update navigation links

--- a/about-us.html
+++ b/about-us.html
@@ -92,6 +92,21 @@
                 </div>
             </div>
         </section>
+        
+        <!-- <section class="navigation">
+            <a href="about-us.html" class="nav-item active">
+                <h3><span class="number">01</span> ABOUT US</h3>
+            </a>
+            <a href="team.html" class="nav-item">
+                <h3><span class="number">02</span> TEAM</h3>
+            </a>
+            <a href="publications.html" class="nav-item">
+                <h3><span class="number">03</span> PUBLICATIONS</h3>
+            </a>
+            <a href="join-us.html" class="nav-item">
+                <h3><span class="number">04</span> JOIN US</h3>
+            </a>
+        </section> -->
     </main>
 
     <script src="js/main.js"></script>
