--- a/team.html
+++ b/team.html
@@ -131,7 +131,7 @@
             <a href="team.html" class="nav-item active">
                 <h3><span class="number">02</span> TEAM</h3>
             </a>
-            <a href="#" class="nav-item">
+            <a href="publications.html" class="nav-item">
                 <h3><span class="number">03</span> PUBLICATIONS</h3>
             </a>
             <a href="join-us.html" class="nav-item">
