--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <a href="team.html" class="nav-item">
                     <h3><span class="number gradient-text">02</span> TEAM</h3>
                 </a>
-                <a href="#" class="nav-item">
+                <a href="publications.html" class="nav-item">
                     <h3><span class="number gradient-text">03</span> PUBLICATIONS</h3>
                 </a>
                 <a href="join-us.html" class="nav-item">
