ready-to-deploy version

--- a/about-us.html
+++ b/about-us.html
@@ -37,9 +37,10 @@
 
         <section class="about-intro">
             <div class="about-content">
-                <h3>Our Vision</h3>
-                <p>Our mission is to develop novel therapies ready for human testing within 5 years, while establishing ourselves as one of the top 10 research teams in AI for drug discovery within the next 5 years.</p>
-                <p>The symbol &Theta; looks like a loop, which represents the beauty of iterative engineering. We stand at this perspective, iteratively solving the most difficult biomedical challenges in the world.</p>
+                <h3>Our Mission</h3>
+                <p>Our mission is to discover new biology, and make novel therapies ready for human testing within 5 years with AI in the therapy development loop.</p>
+                <h3>Why &Theta;?</h3>
+                <p>The symbol &Theta; looks like a loop, which represents the beauty of iterative engineering. We stand at this perspective, iteratively solving the most difficult biomedical challenges in the world combining AI and top-tier wet lab facilities.</p>
             </div>
         </section>
 
@@ -57,8 +58,7 @@
                 </div>
                 <div class="about-details">
                     <h3>Collaborative Team</h3>
-                    <p>THETA TEAM is a unique collaboration between the LTI lab in Monash School of Medicine and the TrustAGI lab in Griffith University. We are based at the Paula Fox Melanoma and Cancer Center, the largest clinical trial site in Australia.</p>
-                    <p>Our team encompasses a diverse range of experts including AI scientists, structural biologists, immunologists, and medical oncologists, bringing together strong and varied backgrounds to tackle complex challenges.</p>
+                    <p>THETA Team brings together the LTI Lab at Monash School of Medicine and the TrustAGI Lab at Griffith University. We are based at the Paula Fox Melanoma & Cancer Centre at The Alfred Hospital—Australia's largest clinical trials program. Our team encompasses a diverse range of experts including AI scientists, structural biologists, immunologists, and medical doctors, bringing together strong and varied backgrounds to tackle complex challenges.</p>
                 </div>
             </div>
 
@@ -75,7 +75,7 @@
                 </div>
             </div>
 
-            <div class="about-card">
+            <!-- <div class="about-card">
                 <div class="about-icon">
                     <svg viewBox="0 0 24 24" width="48" height="48" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M22 12h-4l-3 9L9 3l-3 9H2"></path>
@@ -89,24 +89,9 @@
                         <li>To establish ourselves as one of the top 10 teams globally in AI for drug discovery within the next 5 years</li>
                     </ul>
                     <p>Through our interdisciplinary approach and cutting-edge technologies, we aim to accelerate the development of novel treatments that can make a real difference in patients' lives.</p>
-                </div>
+                </div> -->
             </div>
         </section>
-        
-        <!-- <section class="navigation">
-            <a href="about-us.html" class="nav-item active">
-                <h3><span class="number">01</span> ABOUT US</h3>
-            </a>
-            <a href="team.html" class="nav-item">
-                <h3><span class="number">02</span> TEAM</h3>
-            </a>
-            <a href="publications.html" class="nav-item">
-                <h3><span class="number">03</span> PUBLICATIONS</h3>
-            </a>
-            <a href="join-us.html" class="nav-item">
-                <h3><span class="number">04</span> JOIN US</h3>
-            </a>
-        </section> -->
     </main>
 
     <script src="js/main.js"></script>
