--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="hero-content">
                 <h2 class="main-title">
                     AI + MEDICINE FOR<br>
-                    <span class="subtitle">REAL-WORLD</span><br>
+                    <!-- <span class="subtitle">REAL-WORLD</span><br> -->
                     <span class="gradient-text">THERAPY DEVELOPMENT</span>
                 </h2>
             </div>
