--- a/publications.html
+++ b/publications.html
@@ -47,6 +47,17 @@
             <div class="publication-item">
                 <div class="publication-year">2025</div>
                 <div class="publication-details">
+                    <h3 class="publication-title">A Review Paper on AI-Driven Protein Design (AIP)</h3>
+                    <p class="publication-authors">Koh, H.Y., Zheng, Y. et al.</p>
+                    <p class="publication-journal">Nature Reviews Bioengineering (2025)</p>
+                    <div class="publication-actions">
+                        <span class="publication-button disabled">Stay tuned for details</span>
+                    </div>
+                </div>
+            </div>
+            <div class="publication-item">
+                <div class="publication-year">2025</div>
+                <div class="publication-details">
                     <h3 class="publication-title">Large language models for scientific discovery in molecular property prediction</h3>
                     <p class="publication-authors">Zheng, Y., Koh, H.Y., Ju, J. et al.</p>
                     <p class="publication-journal">Nature Machine Intelligence 7, 437–447 (2025)</p>
