--- a/team.html
+++ b/team.html
@@ -72,14 +72,16 @@
                         <h4 class="member-name">Prof. Shirui Pan</h4>
                         <p class="member-title">Principal Investigator</p>
                         <p class="member-affiliation">TrustAGI Lab Head</p>
+                        <p class="member-affiliation">Griffith University</p>
                     </div>
                     <div class="team-member">
                         <div class="member-photo">
                             <img src="images/Vivek Naranbhai.webp" alt="Prof. Vivek Naranbhai" class="member-photo">
                         </div>
-                        <h4 class="member-name">Prof. Vivek Naranbhai</h4>
+                        <h4 class="member-name">A/Prof. Vivek Naranbhai</h4>
                         <p class="member-title">Principal Investigator</p>
-                        <p class="member-affiliation">LTI Lab Head</p>
+                        <p class="member-affiliation">LTI Lab Head & Medicial Doctor</p>
+                        <p class="member-affiliation">Monash School of Medicine</p>
                     </div>
                     <!-- ... existing team supervisors ... -->
                 </div>
@@ -92,33 +94,43 @@
             <h3 class="section-title">Team Members</h3>
             <div class="team-grid members-grid">
                 <div class="team-member">
-                    <div class="member-photo"></div>
-                    <h4 class="member-name">Sarah Thompson</h4>
-                    <p class="member-title">Research Scientist</p>
-                    <p class="member-affiliation">LTI lab</p>
-                </div>
-                <div class="team-member">
-                    <div class="member-photo"></div>
-                    <h4 class="member-name">David Lee</h4>
-                    <p class="member-title">AI Developer</p>
-                    <p class="member-affiliation">TrustAGI lab</p>
-                </div>
-                <div class="team-member">
-                    <div class="member-photo"></div>
-                    <h4 class="member-name">Jennifer Wu</h4>
-                    <p class="member-title">Clinical Researcher</p>
-                    <p class="member-affiliation">Paula Fox Melanoma Center</p>
-                </div>
-                <div class="team-member">
-                    <div class="member-photo"></div>
-                    <h4 class="member-name">Alex Martinez</h4>
-                    <p class="member-title">Data Scientist</p>
+                    <div class="member-photo">
+                        <img src="images/Christy Ying.png" alt="Christy Ying" class="member-photo">
+                    </div>
+                    <h4 class="member-name">Christy Ying</h4>
+                    <p class="member-title">Biologist</p>
                     <p class="member-affiliation">Monash School of Medicine</p>
                 </div>
                 <div class="team-member">
-                    <div class="member-photo"></div>
-                    <h4 class="member-name">Alex Martinez</h4>
-                    <p class="member-title">Data Scientist</p>
+                    <div class="member-photo">
+                        <img src="images/Jiaxin Ju.png" alt="Jiaxin Ju" class="member-photo">
+                    </div>
+                    <h4 class="member-name">Jiaxin Ju</h4>
+                    <p class="member-title">AI Scientist</p>
+                    <p class="member-affiliation">Griffith University </p>
+                </div>
+                <div class="team-member">
+                    <div class="member-photo">
+                        <img src="images/Justin Zhang.png" alt="Justin Zhang" class="member-photo">
+                    </div>
+                    <h4 class="member-name">Justin Zhang</h4>
+                    <p class="member-title">Immunologist</p>
+                    <p class="member-affiliation">Monash School of Medicine</p>
+                </div>
+                <div class="team-member">
+                    <div class="member-photo">
+                        <img src="images/Tyler Chang.png" alt="Tyler Chang" class="member-photo">
+                    </div>
+                    <h4 class="member-name">Tyler Chang</h4>
+                    <p class="member-title">Biologist</p>
+                    <p class="member-affiliation">Monash School of Medicine</p>
+                </div>
+                <div class="team-member">
+                    <div class="member-photo">
+                        <img src="images/Vinayak.png" alt="Vinayak Annapure" class="member-photo">
+                    </div>
+                    <h4 class="member-name">Vinayak Annapure</h4>
+                    <p class="member-title">Biologist</p>
                     <p class="member-affiliation">Monash School of Medicine</p>
                 </div>
             </div>
@@ -131,7 +143,7 @@
             <a href="team.html" class="nav-item active">
                 <h3><span class="number">02</span> TEAM</h3>
             </a>
-            <a href="publications.html" class="nav-item">
+            <a href="#" class="nav-item">
                 <h3><span class="number">03</span> PUBLICATIONS</h3>
             </a>
             <a href="join-us.html" class="nav-item">
