Add T character favicon to all pages

--- a/about-us.html
+++ b/about-us.html
@@ -6,6 +6,8 @@
     <title>THETA TEAM - About Us</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/about-us.css">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>T</text></svg>">
+    <link rel="apple-touch-icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>T</text></svg>">
 </head>
 <body>
     <header>
