--- a/publications.html
+++ b/publications.html
@@ -6,6 +6,8 @@
     <title>THETA TEAM - Publications</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/publications.css">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>T</text></svg>">
+    <link rel="apple-touch-icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>T</text></svg>">
 </head>
 <body>
     <header>
@@ -48,7 +50,7 @@
                 <div class="publication-year">2025</div>
                 <div class="publication-details">
                     <h3 class="publication-title">A Review Paper on AI-Driven Protein Design (AIP)</h3>
-                    <p class="publication-authors">Koh, H.Y., Zheng, Y. et al.</p>
+                    <p class="publication-authors">Koh, H.Y.*, Zheng, Y. et al.*</p>
                     <p class="publication-journal">Nature Reviews Bioengineering (2025)</p>
                     <div class="publication-actions">
                         <span class="publication-button disabled">Stay tuned for details</span>
@@ -59,7 +61,7 @@
                 <div class="publication-year">2025</div>
                 <div class="publication-details">
                     <h3 class="publication-title">Large language models for scientific discovery in molecular property prediction</h3>
-                    <p class="publication-authors">Zheng, Y., Koh, H.Y., Ju, J. et al.</p>
+                    <p class="publication-authors">Zheng, Y.*, Koh, H.Y.*, Ju, J. et al.*</p>
                     <p class="publication-journal">Nature Machine Intelligence 7, 437–447 (2025)</p>
                     <p class="publication-doi">DOI: <a href="https://doi.org/10.1038/s42256-025-00994-z" target="_blank">https://doi.org/10.1038/s42256-025-00994-z</a></p>
                     <div class="publication-actions">
