--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>THETA TEAM - AI + MEDICINE</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>T</text></svg>">
+    <link rel="apple-touch-icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>T</text></svg>">
 </head>
 <body>
     <div class="video-background">
@@ -21,9 +23,9 @@
             </a>
         </div>
         <div class="institutions">
-            <p>LTI lab, Monash School of Medicine</p>
+            <p>LTI lab, Monash University</p>
             <p>TrustAGI lab, Griffith University</p>
-            <p>Paula Fox Melanoma and Cancer Center</p>
+            <p>Paula Fox Melanoma and Cancer Center, The Alfred Hospital</p>
         </div>
     </header>
 
