--- a/team.html
+++ b/team.html
@@ -6,6 +6,8 @@
     <title>THETA TEAM - Team</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/team.css">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>T</text></svg>">
+    <link rel="apple-touch-icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>T</text></svg>">
 </head>
 <body>
     <header>
@@ -21,7 +23,7 @@
         <div class="institutions">
             <p>LTI lab, Monash School of Medicine</p>
             <p>TrustAGI lab, Griffith University</p>
-            <p>Paula Fox Melanoma and Cancer Center</p>
+            <p>Paula Fox Melanoma and Cancer Center, The Alfred Hospital</p>
         </div>
     </header>
 
@@ -48,7 +50,7 @@
                     </div>
                         <h4 class="member-name">Dr. Huan Yee koh</h4>
                         <p class="member-title">Chief Organizer</p>
-                        <p class="member-affiliation">Monash School of Medicine</p>
+                        <p class="member-affiliation">Monash University, School of Translational Medicine</p>
                     </div>
                     <div class="team-member">
                         <div class="member-photo">
@@ -56,7 +58,7 @@
                         </div>
                         <h4 class="member-name">Dr. Yizhen Zheng</h4>
                         <p class="member-title">Chief Organizer</p>
-                        <p class="member-affiliation">Monash School of Medicine</p>
+                        <p class="member-affiliation">Monash University, School of Translational Medicine</p>
                     </div>
                 </div>
             </section>
@@ -72,7 +74,7 @@
                         <h4 class="member-name">Prof. Shirui Pan</h4>
                         <p class="member-title">Principal Investigator</p>
                         <p class="member-affiliation">TrustAGI Lab Head</p>
-                        <p class="member-affiliation">Griffith University</p>
+                        <p class="member-affiliation">Griffith University, School of Information and Communication Technology</p>
                     </div>
                     <div class="team-member">
                         <div class="member-photo">
@@ -81,7 +83,7 @@
                         <h4 class="member-name">A/Prof. Vivek Naranbhai</h4>
                         <p class="member-title">Principal Investigator</p>
                         <p class="member-affiliation">LTI Lab Head & Medicial Doctor</p>
-                        <p class="member-affiliation">Monash School of Medicine</p>
+                        <p class="member-affiliation">Monash University, School of Translational Medicine</p>
                     </div>
                     <!-- ... existing team supervisors ... -->
                 </div>
@@ -99,7 +101,7 @@
                     </div>
                     <h4 class="member-name">Christy Ying</h4>
                     <p class="member-title">Biologist</p>
-                    <p class="member-affiliation">Monash School of Medicine</p>
+                    <p class="member-affiliation">Monash University, School of Translational Medicine</p>
                 </div>
                 <div class="team-member">
                     <div class="member-photo">
@@ -107,7 +109,7 @@
                     </div>
                     <h4 class="member-name">Jiaxin Ju</h4>
                     <p class="member-title">AI Scientist</p>
-                    <p class="member-affiliation">Griffith University </p>
+                    <p class="member-affiliation">Griffith University, TrustAGI Lab</p>
                 </div>
                 <div class="team-member">
                     <div class="member-photo">
@@ -115,23 +117,23 @@
                     </div>
                     <h4 class="member-name">Justin Zhang</h4>
                     <p class="member-title">Immunologist</p>
-                    <p class="member-affiliation">Monash School of Medicine</p>
+                    <p class="member-affiliation">Monash University, School of Translational Medicine</p>
                 </div>
                 <div class="team-member">
                     <div class="member-photo">
                         <img src="images/Tyler Chang.png" alt="Tyler Chang" class="member-photo">
                     </div>
                     <h4 class="member-name">Tyler Chang</h4>
-                    <p class="member-title">Biologist</p>
-                    <p class="member-affiliation">Monash School of Medicine</p>
+                    <p class="member-title">Biochemist</p>
+                    <p class="member-affiliation">Monash University, School of Translational Medicine</p>
                 </div>
                 <div class="team-member">
                     <div class="member-photo">
                         <img src="images/Vinayak.png" alt="Vinayak Annapure" class="member-photo">
                     </div>
                     <h4 class="member-name">Vinayak Annapure</h4>
-                    <p class="member-title">Biologist</p>
-                    <p class="member-affiliation">Monash School of Medicine</p>
+                    <p class="member-title">Biochemist</p>
+                    <p class="member-affiliation">Monash University, School of Translational Medicine</p>
                 </div>
             </div>
         </section>
