update prof pan's email

--- a/join-us.html
+++ b/join-us.html
@@ -203,7 +203,7 @@
             
             <div class="email-info">
                 <p><strong>To:</strong> yizhen.zheng@monash.edu, huan.koh@monash.edu</p>
-                <p><strong>CC:</strong> s.pan@griffith.edu, vivek.naranbhai@monash.edu</p>
+                <p><strong>CC:</strong> s.pan@griffith.edu.au, vivek.naranbhai@monash.edu</p>
                 <p><strong>Subject:</strong> THETA TEAM Application - [Your Name] - [Position of Interest]</p>
             </div>
         `;
