add publication details

--- a/publications.html
+++ b/publications.html
@@ -49,11 +49,16 @@
             <div class="publication-item">
                 <div class="publication-year">2025</div>
                 <div class="publication-details">
-                    <h3 class="publication-title">A Review Paper on AI-Driven Protein Design (AIP)</h3>
-                    <p class="publication-authors">Koh, H.Y.*, Zheng, Y. et al.*</p>
+                    <h3 class="publication-title">AI-Driven Protein Design</h3>
+                    <p class="publication-authors">Koh, H.Y.*, Zheng, Y. et al.*, Shirui Pan, George Church</p>
                     <p class="publication-journal">Nature Reviews Bioengineering (2025)</p>
+                    <p class="publication-doi">DOI: <a href="https://www.nature.com/articles/s44222-025-00349-8" target="_blank">https://www.nature.com/articles/s44222-025-00349-8</a></p>
                     <div class="publication-actions">
-                        <span class="publication-button disabled">Stay tuned for details</span>
+                        <a href="https://www.nature.com/articles/s44222-025-00349-8" class="publication-button" target="_blank">Read Paper</a>
+                    </div>
+                    <div class="publication-abstract">
+                        <h4>Abstract</h4>
+                        <p>Protein design is undergoing a revolution driven by artificial intelligence (AI), transforming how we engineer proteins for applications in drug discovery, biotechnology and synthetic biology. By navigating the immense complexity of protein sequence space and overcoming the limitations of structural and functional data, AI enables unprecedented precision and speed in designing novel proteins with tailored functions. Central to this Review is a comprehensive and actionable roadmap for designers, providing step-by-step guidance on how to integrate state-of-the-art AI tools into protein design workflows, including tools for structural and functional prediction as well as generative models for de novo design. To illustrate this roadmap in practice, we present case studies showcasing AI-driven protein design, from engineering therapeutic proteins to designing novel proteins that unlock enzyme functions and reprogramme biomolecular systems. Looking ahead, we outline future directions highlighting the vast potential of AI to revolutionize synthetic biology, expedite drug development and drive sustainable biotechnology, positioning it as a transformative force at the forefront of protein design.</p>
                     </div>
                 </div>
             </div>
