update team & publications

--- a/publications.html
+++ b/publications.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>THETA TEAM - Publications</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/publications.css">
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>T</text></svg>">
-    <link rel="apple-touch-icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>T</text></svg>">
+    <link rel="icon"
+        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>T</text></svg>">
+    <link rel="apple-touch-icon"
+        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>T</text></svg>">
 </head>
+
 <body>
     <header>
         <div class="logo-container">
@@ -26,7 +30,7 @@
     <main>
         <section class="page-title">
             <h2><span class="number gradient-text">03</span> PUBLICATIONS</h2>
-            
+
             <!-- Add video background behind the title -->
             <div class="video-background">
                 <video autoplay muted loop playsinline>
@@ -40,7 +44,8 @@
         <section class="publications-intro">
             <div class="publications-content">
                 <h3>Our Research</h3>
-                <p>Our team publishes cutting-edge research in the fields of artificial intelligence, computational biology, and drug discovery. Below you'll find our latest peer-reviewed publications.</p>
+                <p>Our team publishes cutting-edge research in the fields of artificial intelligence, computational
+                    biology, and drug discovery. Below you'll find our latest peer-reviewed publications.</p>
             </div>
         </section>
 
@@ -49,32 +54,88 @@
             <div class="publication-item">
                 <div class="publication-year">2025</div>
                 <div class="publication-details">
-                    <h3 class="publication-title">AI-Driven Protein Design</h3>
-                    <p class="publication-authors">Koh, H.Y.*, Zheng, Y. et al.*, Shirui Pan, George Church</p>
-                    <p class="publication-journal">Nature Reviews Bioengineering (2025)</p>
-                    <p class="publication-doi">DOI: <a href="https://www.nature.com/articles/s44222-025-00349-8" target="_blank">https://www.nature.com/articles/s44222-025-00349-8</a></p>
+                    <h3 class="publication-title">SurfDock is a surface-informed diffusion generative model for reliable
+                        and accurate protein–ligand complex prediction</h3>
+                    <p class="publication-authors">Cao, D., Chen, M. et al.</p>
+                    <p class="publication-journal">Nature Methods 22, 310–322 (2025)</p>
+                    <p class="publication-doi">DOI: <a href="https://doi.org/10.1038/s41592-024-02516-y"
+                            target="_blank">https://doi.org/10.1038/s41592-024-02516-y</a></p>
                     <div class="publication-actions">
-                        <a href="https://www.nature.com/articles/s44222-025-00349-8" class="publication-button" target="_blank">Read Paper</a>
+                        <a href="https://doi.org/10.1038/s41592-024-02516-y" class="publication-button"
+                            target="_blank">Read Paper</a>
                     </div>
                     <div class="publication-abstract">
                         <h4>Abstract</h4>
-                        <p>Protein design is undergoing a revolution driven by artificial intelligence (AI), transforming how we engineer proteins for applications in drug discovery, biotechnology and synthetic biology. By navigating the immense complexity of protein sequence space and overcoming the limitations of structural and functional data, AI enables unprecedented precision and speed in designing novel proteins with tailored functions. Central to this Review is a comprehensive and actionable roadmap for designers, providing step-by-step guidance on how to integrate state-of-the-art AI tools into protein design workflows, including tools for structural and functional prediction as well as generative models for de novo design. To illustrate this roadmap in practice, we present case studies showcasing AI-driven protein design, from engineering therapeutic proteins to designing novel proteins that unlock enzyme functions and reprogramme biomolecular systems. Looking ahead, we outline future directions highlighting the vast potential of AI to revolutionize synthetic biology, expedite drug development and drive sustainable biotechnology, positioning it as a transformative force at the forefront of protein design.</p>
+                        <p>Accurately predicting protein–ligand interactions is crucial for understanding cellular
+                            processes. We introduce SurfDock, a deep-learning method that addresses this challenge by
+                            integrating protein sequence, three-dimensional structural graphs and surface-level features
+                            into an equivariant architecture. SurfDock employs a generative diffusion model on a
+                            non-Euclidean manifold, optimizing molecular translations, rotations and torsions to
+                            generate reliable binding poses. Our extensive evaluations across various benchmarks
+                            demonstrate SurfDock’s superiority over existing methods in docking success rates and
+                            adherence to physical constraints. It also exhibits remarkable generalizability to unseen
+                            proteins and predicted apo structures, while achieving state-of-the-art performance in
+                            virtual screening tasks. In a real-world application, SurfDock identified seven novel hit
+                            molecules in a virtual screening project targeting aldehyde dehydrogenase 1B1, a key enzyme
+                            in cellular metabolism. This showcases SurfDock’s ability to elucidate molecular mechanisms
+                            underlying cellular processes. These results highlight SurfDock’s potential as a
+                            transformative tool in structural biology, offering enhanced accuracy, physical plausibility
+                            and practical applicability in understanding protein–ligand interactions.</p>
                     </div>
                 </div>
             </div>
             <div class="publication-item">
                 <div class="publication-year">2025</div>
                 <div class="publication-details">
-                    <h3 class="publication-title">Large language models for scientific discovery in molecular property prediction</h3>
-                    <p class="publication-authors">Zheng, Y.*, Koh, H.Y.*, Ju, J. et al.*</p>
-                    <p class="publication-journal">Nature Machine Intelligence 7, 437–447 (2025)</p>
-                    <p class="publication-doi">DOI: <a href="https://doi.org/10.1038/s42256-025-00994-z" target="_blank">https://doi.org/10.1038/s42256-025-00994-z</a></p>
+                    <h3 class="publication-title">AI-Driven Protein Design</h3>
+                    <p class="publication-authors">Koh, H.Y.*, Zheng, Y. et al.*, Shirui Pan, George Church</p>
+                    <p class="publication-journal">Nature Reviews Bioengineering (2025)</p>
+                    <p class="publication-doi">DOI: <a href="https://www.nature.com/articles/s44222-025-00349-8"
+                            target="_blank">https://www.nature.com/articles/s44222-025-00349-8</a></p>
                     <div class="publication-actions">
-                        <a href="https://doi.org/10.1038/s42256-025-00994-z" class="publication-button" target="_blank">Read Paper</a>
+                        <a href="https://www.nature.com/articles/s44222-025-00349-8" class="publication-button"
+                            target="_blank">Read Paper</a>
                     </div>
                     <div class="publication-abstract">
                         <h4>Abstract</h4>
-                        <p>Recent advances in large language models have demonstrated remarkable capabilities in various domains, including natural language processing and code generation. In this work, we extend these capabilities to molecular property prediction, a critical task in drug discovery. We propose a novel approach that leverages the knowledge embedded within large language models to enhance the prediction of molecular properties, leading to more accurate and interpretable results compared to traditional methods.</p>
+                        <p>Protein design is undergoing a revolution driven by artificial intelligence (AI),
+                            transforming how we engineer proteins for applications in drug discovery, biotechnology and
+                            synthetic biology. By navigating the immense complexity of protein sequence space and
+                            overcoming the limitations of structural and functional data, AI enables unprecedented
+                            precision and speed in designing novel proteins with tailored functions. Central to this
+                            Review is a comprehensive and actionable roadmap for designers, providing step-by-step
+                            guidance on how to integrate state-of-the-art AI tools into protein design workflows,
+                            including tools for structural and functional prediction as well as generative models for de
+                            novo design. To illustrate this roadmap in practice, we present case studies showcasing
+                            AI-driven protein design, from engineering therapeutic proteins to designing novel proteins
+                            that unlock enzyme functions and reprogramme biomolecular systems. Looking ahead, we outline
+                            future directions highlighting the vast potential of AI to revolutionize synthetic biology,
+                            expedite drug development and drive sustainable biotechnology, positioning it as a
+                            transformative force at the forefront of protein design.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="publication-item">
+                <div class="publication-year">2025</div>
+                <div class="publication-details">
+                    <h3 class="publication-title">Large language models for scientific discovery in molecular property
+                        prediction</h3>
+                    <p class="publication-authors">Zheng, Y.*, Koh, H.Y.*, Ju, J. et al.*</p>
+                    <p class="publication-journal">Nature Machine Intelligence 7, 437–447 (2025)</p>
+                    <p class="publication-doi">DOI: <a href="https://doi.org/10.1038/s42256-025-00994-z"
+                            target="_blank">https://doi.org/10.1038/s42256-025-00994-z</a></p>
+                    <div class="publication-actions">
+                        <a href="https://doi.org/10.1038/s42256-025-00994-z" class="publication-button"
+                            target="_blank">Read Paper</a>
+                    </div>
+                    <div class="publication-abstract">
+                        <h4>Abstract</h4>
+                        <p>Recent advances in large language models have demonstrated remarkable capabilities in various
+                            domains, including natural language processing and code generation. In this work, we extend
+                            these capabilities to molecular property prediction, a critical task in drug discovery. We
+                            propose a novel approach that leverages the knowledge embedded within large language models
+                            to enhance the prediction of molecular properties, leading to more accurate and
+                            interpretable results compared to traditional methods.</p>
                     </div>
                 </div>
             </div>
@@ -82,16 +143,56 @@
             <div class="publication-item">
                 <div class="publication-year">2024</div>
                 <div class="publication-details">
-                    <h3 class="publication-title">Physicochemical graph neural network for learning protein–ligand interaction fingerprints from sequence data</h3>
-                    <p class="publication-authors">Koh, H.Y., Nguyen, A.T.N., Pan, S. et al.</p>
-                    <p class="publication-journal">Nature Machine Intelligence 6, 673–687 (2024)</p>
-                    <p class="publication-doi">DOI: <a href="https://doi.org/10.1038/s42256-024-00847-1" target="_blank">https://doi.org/10.1038/s42256-024-00847-1</a></p>
+                    <h3 class="publication-title">Generic protein–ligand interaction scoring by integrating physical
+                        prior knowledge and data augmentation modelling</h3>
+                    <p class="publication-authors">Cao, D. et al.</p>
+                    <p class="publication-journal">Nature Machine Intelligence 6, 261–270 (2024)</p>
+                    <p class="publication-doi">DOI: <a href="https://doi.org/10.1038/s42256-024-00849-z"
+                            target="_blank">https://doi.org/10.1038/s42256-024-00849-z</a></p>
                     <div class="publication-actions">
-                        <a href="https://doi.org/10.1038/s42256-024-00847-1" class="publication-button" target="_blank">Read Paper</a>
+                        <a href="https://doi.org/10.1038/s42256-024-00849-z" class="publication-button"
+                            target="_blank">Read Paper</a>
                     </div>
                     <div class="publication-abstract">
                         <h4>Abstract</h4>
-                        <p>Understanding protein-ligand interactions is fundamental to drug discovery and development. We present a novel physicochemical graph neural network architecture designed to learn protein-ligand interaction fingerprints directly from sequence data. Our approach integrates physicochemical properties of amino acids and small molecules to create more informative representations, leading to improved prediction accuracy and interpretability of binding interactions.</p>
+                        <p>Developing robust methods for evaluating protein–ligand interactions has been a long-standing
+                            problem. Data-driven methods may memorize ligand and protein training data rather than
+                            learning protein–ligand interactions. Here we show a scoring approach called EquiScore,
+                            which utilizes a heterogeneous graph neural network to integrate physical prior knowledge
+                            and characterize protein–ligand interactions in equivariant geometric space. EquiScore is
+                            trained based on a new dataset constructed with multiple data augmentation strategies and a
+                            stringent redundancy-removal scheme. On two large external test sets, EquiScore consistently
+                            achieved top-ranking performance compared to 21 other methods. When EquiScore is used
+                            alongside different docking methods, it can effectively enhance the screening ability of
+                            these docking methods. EquiScore also showed good performance on the activity-ranking task
+                            of a series of structural analogues, indicating its potential to guide lead compound
+                            optimization. Finally, we investigated different levels of interpretability of EquiScore,
+                            which may provide more insights into structure-based drug design.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="publication-item">
+                <div class="publication-year">2024</div>
+                <div class="publication-details">
+                    <h3 class="publication-title">Physicochemical graph neural network for learning protein–ligand
+                        interaction fingerprints from sequence data</h3>
+                    <p class="publication-authors">Koh, H.Y., Nguyen, A.T.N., Pan, S. et al.</p>
+                    <p class="publication-journal">Nature Machine Intelligence 6, 673–687 (2024)</p>
+                    <p class="publication-doi">DOI: <a href="https://doi.org/10.1038/s42256-024-00847-1"
+                            target="_blank">https://doi.org/10.1038/s42256-024-00847-1</a></p>
+                    <div class="publication-actions">
+                        <a href="https://doi.org/10.1038/s42256-024-00847-1" class="publication-button"
+                            target="_blank">Read Paper</a>
+                    </div>
+                    <div class="publication-abstract">
+                        <h4>Abstract</h4>
+                        <p>Understanding protein-ligand interactions is fundamental to drug discovery and development.
+                            We present a novel physicochemical graph neural network architecture designed to learn
+                            protein-ligand interaction fingerprints directly from sequence data. Our approach integrates
+                            physicochemical properties of amino acids and small molecules to create more informative
+                            representations, leading to improved prediction accuracy and interpretability of binding
+                            interactions.</p>
                     </div>
                 </div>
             </div>
@@ -100,4 +201,5 @@
 
     <script src="js/main.js"></script>
 </body>
-</html> 
+
+</html>
