--- a/team.html
+++ b/team.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>THETA TEAM - Team</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/team.css">
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>T</text></svg>">
-    <link rel="apple-touch-icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>T</text></svg>">
+    <link rel="icon"
+        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>T</text></svg>">
+    <link rel="apple-touch-icon"
+        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>T</text></svg>">
 </head>
+
 <body>
     <header>
         <div class="logo-container">
@@ -29,7 +33,7 @@
 
     <main>
         <section class="page-title">
-            <h2><span class="number gradient-text">02</span> TEAM  (Alphabetical Order)</h2>
+            <h2><span class="number gradient-text">02</span> TEAM (Alphabetical Order)</h2>
             <div class="video-background">
                 <video autoplay muted loop playsinline>
                     <source src="videos/Video Playback.mp4" type="video/mp4">
@@ -46,23 +50,31 @@
                 <div class="team-grid organizer-grid">
                     <div class="team-member">
                         <div class="member-photo">
-                        <img src="images/Huan Yee Koh.jpeg" alt="Dr. Huan Yee Koh" class="member-photo">
-                    </div>
-                        <h4 class="member-name">Dr. Huan Yee koh</h4>
-                        <p class="member-title">Chief Organizer</p>
-                        <p class="member-affiliation">Monash University, School of Translational Medicine</p>
-                    </div>
-                    <div class="team-member">
-                        <div class="member-photo">
                             <img src="images/Yizhen Zheng.jpg" alt="Dr. Yizhen Zheng" class="member-photo">
                         </div>
                         <h4 class="member-name">Dr. Yizhen Zheng</h4>
                         <p class="member-title">Chief Organizer</p>
                         <p class="member-affiliation">Monash University, School of Translational Medicine</p>
                     </div>
+                    <div class="team-member">
+                        <div class="member-photo">
+                            <img src="images/Huan Yee Koh.jpeg" alt="Dr. Huan Yee Koh" class="member-photo">
+                        </div>
+                        <h4 class="member-name">Dr. Huan Yee koh</h4>
+                        <p class="member-title">Chief Organizer</p>
+                        <p class="member-affiliation">Monash University, School of Translational Medicine</p>
+                    </div>
+                    <div class="team-member">
+                        <div class="member-photo">
+                            <img src="images/duanhua_cao.jpg" alt="Duanhua Cao" class="member-photo">
+                        </div>
+                        <h4 class="member-name">Duanhua Cao</h4>
+                        <p class="member-title">Chief Organizer</p>
+                        <p class="member-affiliation">IDD Lab (Intelligent Drug Discovery Laboratory)</p>
+                    </div>
                 </div>
             </section>
-    
+
             <!-- Team Supervisors Section -->
             <section class="team-section half-width supervisors-section">
                 <h3 class="section-title">Team Supervisors</h3>
@@ -74,7 +86,8 @@
                         <h4 class="member-name">Prof. Shirui Pan</h4>
                         <p class="member-title">Principal Investigator</p>
                         <p class="member-affiliation">TrustAGI Lab Head</p>
-                        <p class="member-affiliation">Griffith University, School of Information and Communication Technology</p>
+                        <p class="member-affiliation">Griffith University, School of Information and Communication
+                            Technology</p>
                     </div>
                     <div class="team-member">
                         <div class="member-photo">
@@ -89,7 +102,7 @@
                 </div>
             </section>
         </div>
-    
+
 
         <!-- Team Members Section -->
         <section class="team-section">
@@ -156,4 +169,5 @@
 
     <script src="js/main.js"></script>
 </body>
-</html> 
+
+</html>
